# yars

./: Cargo.toml  README.md  justfile
examples/: clickme.html  custom_transport.rs  echo.rs  form.rs  hello_world.rs  simple.rs  simple_custom_transport.rs
examples/form/: index.html  main.rs
examples/web_app/: main.rs
examples/web_app/res/: index.html  script.js
src/: constants.rs  error.rs  http.rs  lib.rs  main.rs  prelude.rs  protocol.rs  request.rs  response.rs  result.rs  router.rs  server.rs  status.rs  transport.rs  version.rs
src/http/: request.rs  response.rs  response_builder.rs  status.rs
src/http/request/: parser.rs
src/protocol/: http.rs
src/request/: parser.rs
src/response/: builder.rs
src/server/: builder.rs
src/transport/: tcp.rs
tests/: integration_test.rs
