[package]
name = "yars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.97"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
